# factor

./: .gitignore  README.md  factor.cabal
doc/: Makefile  ecm-example.txt  ecm-param.hs  ecm-param.txt  ecm-profile.txt  factor-profile.hs  factor-usage.txt  nfs-example.txt  nfs-profile.txt  swinnerton-dyer.hs  swinnerton-dyer.txt
src/: Factor.hs  Main.hs  Test.hs
src/Factor/: Bz.hs  Ec.hs  Gaussian.hs  Gfpx.hs  Nfs.hs  Nfzw.hs  Prime.hs  Term.hs  Util.hs  Value.hs  Zx.hs
