name: factor
version: 1.1
category: Number Theory
synopsis: Factoring integers
license: MIT
license-file: LICENSE
cabal-version: >= 1.8.0.2
build-type: Simple
extra-source-files: README.md
author: Joe Leslie-Hurd <joe@gilith.com>
maintainer: Joe Leslie-Hurd <joe@gilith.com>
description:
  Factoring positive integers using the Williams p+1 factorization
  method.

Library
  build-depends:
    base >= 4.0 && < 5.0,
    containers >= 0.5.7.1,
    parsec >= 3.1,
    pretty >= 1.1,
    random >= 1.0.1.1
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
    Factor,
    Factor.Bz,
    Factor.Ec,
    Factor.Gaussian,
    Factor.Gfpx,
    Factor.Nfs,
    Factor.Nfzw,
    Factor.Prime,
    Factor.Term,
    Factor.Util,
    Factor.Value,
    Factor.Zx

executable factor
  build-depends:
    base >= 4.0 && < 5.0,
    containers >= 0.5.7.1,
    parsec >= 3.1,
    pretty >= 1.1,
    random >= 1.0.1.1,
    factor
  hs-source-dirs: src
  ghc-options: -Wall
  main-is: Main.hs

test-suite factor-test
  type: exitcode-stdio-1.0
  build-depends:
    base >= 4.0 && < 5.0,
    containers >= 0.5.7.1,
    parsec >= 3.1,
    pretty >= 1.1,
    QuickCheck >= 2.4,
    random >= 1.0.1.1
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-orphans
  main-is: Test.hs

source-repository head
  type: git
  location: git://github.com/gilith/factor.git
